# conductor-ai

./: .conductor-prompt-01KMBM48Q4F2D950F6K0GX1FNY.txt  .conductor-prompt-01KMBM48V5QNEZBD2JVMT3YD5D.txt  .conductor-prompt-01KMBM48Z6N00VMKTEBAKPK94B.txt  .conductor-prompt-01KMBM49363KET6V8H3WYDVZ4E.txt  .conductor-prompt-01KMTNZRC4BQ4HKWK9V2Z4N9CQ.txt  .conductor-prompt-01KMTNZS6W5ZTWA2T6QMPFC95A.txt  .conductor-prompt-01KMTNZT0ZG4E38CQBZ915QFB0.txt  .conductor-prompt-01KMTNZTV53J1ZV4ZHX72TEWK9.txt  .conductor-prompt-01KMTNZVN5Z3M5C0TGEXVZNV82.txt  .conductor-prompt-01KMTNZWEWRPTFV59CF6D457KV.txt  .conductor-prompt-01KMTNZX903AEHW419RAVKR351.txt  .conductor-prompt-01KMTNZY34CB2XBG8VWHCJ9S76.txt  .conductor-prompt-01KMTP7KPTCWQ32X3QDNSQP9CR.txt  .conductor-prompt-01KMTP7MGS49RTW2T9TFCGPA1B.txt  .conductor-prompt-01KMTP7NARTTY8Y44SC81QH0H2.txt  .conductor-prompt-01KMTP7P4PWZ55V9M52YHD66SK.txt  .conductor-prompt-01KMTP7PYJCA4A58Y2A61AYM8A.txt  .conductor-prompt-01KMTP7QRH12VMDF0BD817A6SA.txt  .conductor-prompt-01KMTP7RJNN8DM4PKQPQRYBWAT.txt  .conductor-prompt-01KMTP7T70XT6HMHH1B7BV0T38.txt  .conductor-prompt-01KN28ESENNRPSMN9A8XKYQFHD.txt  .conductor-prompt-01KN28ET8S3RMSH6FCGRR84N5X.txt  .conductor-prompt-01KN28EV320B0RT0CBAXYCMD6T.txt  .conductor-prompt-01KN28EVXDGSEWYTX9GVH62BES.txt  .conductor-prompt-01KN28EWQMMH0A4NBZXQ8VG86R.txt  .conductor-prompt-01KN28EXHXW9CWTVCA2G8MP40H.txt  .conductor-prompt-01KN28EYC4E0RDNHBCS5H6NNN8.txt  .conductor-prompt-01KN28EZ66EPYZNAQN1MDVGM51.txt  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FLOW_OUTPUT  PLAN.md  README.md  build.sh  package-lock.json  package.json  restart.sh  (+10 more)
conductor-cli/: Cargo.toml
conductor-cli/src/: background.rs  commands.rs  helpers.rs  main.rs  mcp.rs  setup.rs  statusline.rs
conductor-cli/src/handlers/: agent.rs  conversation.rs  dev.rs  feature.rs  mcp.rs  mod.rs  notifications.rs  repo.rs  setup.rs  statusline.rs  tickets.rs  workflow.rs  worktree.rs
conductor-cli/src/mcp/: helpers.rs  mod.rs  resources.rs  server.rs  subscriptions.rs
conductor-cli/tests/: cli_tests.rs
conductor-core/: Cargo.toml
conductor-core/builtin_workflows/: hello.wf
conductor-core/src/: agent.rs  agent_comm.rs  agent_config.rs  agent_identity.rs  agent_orchestration.rs  agent_runtime.rs  attachments.rs  autonomous.rs  builtin_workflows.rs  conductor.rs  config.rs  consistency.rs  error.rs  error_vocabulary.rs  escape_hatch.rs  feature.rs  git.rs  github.rs  github_app.rs  graph.rs  hooks.rs  infer.rs  issue_source.rs  jira_acli.rs  lib.rs  merge_queue.rs  milestone.rs  models.rs  notification_event.rs  notification_hooks.rs  notification_manager.rs  notify.rs  operational_catalog.rs  orchestrator.rs  post_run.rs  pr_review.rs  process_utils.rs  prompt_config.rs  push.rs  recovery.rs  (+18 more)
conductor-core/src/agent/: context.rs  db.rs  log_parsing.rs  mod.rs  status.rs  tmux.rs  types.rs
conductor-core/src/agent_runtime/: conductor_headless.rs
conductor-core/src/conversation/: manager.rs  mod.rs  types.rs
conductor-core/src/db/: migrations.rs  mod.rs  seed.rs
conductor-core/src/feature/: helpers.rs  manager.rs  mod.rs  tests.rs  types.rs
conductor-core/src/notify/: anomalies.rs  dedup.rs  event.rs  gates.rs  mod.rs  runs.rs  tests.rs  transitions.rs
conductor-core/src/runtime/: adapter.rs  claude.rs  cli.rs  mod.rs  script.rs
conductor-core/src/schema_config/: issues.rs  loader.rs  mod.rs  prompt.rs  tests.rs  tool_definition.rs  types.rs  validation.rs
conductor-core/src/tickets/: mod.rs  query.rs  syncer.rs  tests.rs
conductor-core/src/workflow/: action_executor.rs  action_registry_builder.rs  api_call_executor.rs  batch_validate.rs  cancellation.rs  cancellation_reason.rs  channel_event_sink.rs  checkpoint.rs  claude_agent_executor.rs  mod.rs  (+29 more)
conductor-core/templates/: create-issue.wft  fix-ci.wft  iterate-pr.wft  lint-fix.wft  qualify-ticket.wft  review-pr.wft  ticket-to-pr.wft
conductor-core/tests/: cli_runtime_integration.rs  common.rs  script_runtime_integration.rs
conductor-desktop/: Cargo.toml  tauri.conf.json
conductor-desktop/capabilities/: default.json
conductor-desktop/icons/: icon.icns
conductor-desktop/src/: commands.rs  main.rs  state.rs
conductor-tui/: Cargo.toml
conductor-tui/src/: action.rs  app.rs  background.rs  config.rs  event.rs  input.rs  lib.rs  main.rs  notify.rs  state.rs  test_support.rs  theme.rs
conductor-tui/tests/: tui_snapshots.rs
conductor-web/: Cargo.toml  build.rs
conductor-web/frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
conductor-web/src/: assets.rs  attachments.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  notify.rs  openapi.rs  push.rs  state.rs  test_helpers.rs
conductor-web/static/: index.html
conductor-web/tests/: api_tests.rs
runkon-flow/: Cargo.toml
runkon-flow-executors/: Cargo.toml
runkon-flow-executors/examples/: standalone_flow.rs
runkon-flow-executors/src/: agent_loader.rs  anthropic_api.rs  claude_agent.rs  lib.rs  output.rs  path_env.rs
runkon-flow/examples/: README.md  always_approve_gate.rs  echo_executor.rs  fixed_env_provider.rs  full_engine_minimal.rs  logging_child_runner.rs  static_items_provider.rs  static_workflow_resolver.rs  stdout_event_sink.rs
runkon-flow/migrations/: V001__create_workflow_tables.sql
runkon-flow/src/: cancellation.rs  cancellation_reason.rs  channel_event_sink.rs  constants.rs  diagnostics.rs  engine.rs  engine_error.rs  events.rs  extensions.rs  flow_engine.rs  helpers.rs  lib.rs  migrations.rs  output_schema.rs  persistence_memory.rs  persistence_sqlite.rs  prompt_builder.rs  status.rs  test_helpers.rs  types.rs  workflow_resolver_directory.rs  workflow_resolver_memory.rs
runkon-flow/tests/: basic_flow.rs  control_flow.rs  cross_harness_composition.rs  engine_core.rs  foreach.rs  gates_and_errors.rs  lease_refresh.rs
runkon-runtimes/: Cargo.toml
runkon-runtimes/src/: agent_def.rs  config.rs  error.rs  headless.rs  lib.rs  permission.rs  process_utils.rs  run.rs  text_util.rs  tracker.rs
(+780 files in other folders)
