[package]
name = "conductor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Conductor — multi-repo orchestration"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
