[package]
name = "conductor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Conductor — multi-repo orchestration"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
