[package]
name = "conductor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Conductor — multi-repo orchestration"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
toml = "0.8"
dirs = "6"
jsonwebtoken = "9"
serde_yml = "0.0"
notify = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
