[package]
name = "conductor-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri v2 desktop application for Conductor"

[[bin]]
name = "conductor-desktop"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-web = { path = "../conductor-web" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
