[package]
name = "conductor-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI for Conductor — multi-repo orchestration"

[lib]
name = "conductor_tui"
path = "src/lib.rs"

[[bin]]
name = "conductor-tui"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tui-textarea = "0.7"
toml = "0.8"
serde_yml = "0.0"
tracing = "0.1"
ulid = "1"

[dev-dependencies]
tempfile = "3"
insta = "1"
