[package]
name = "conductor-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for Conductor"

[[bin]]
name = "conductor-web"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
