[package]
name = "conductor-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for Conductor"

[[bin]]
name = "conductor-web"
path = "src/main.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
web-push = "0.10"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
conductor-core = { path = "../conductor-core", features = ["test-helpers", "test-notifications"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
bytes = "1"
http-body-util = "0.1"
