[package]
name = "runkon-runtimes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable agent runtime harness — spawn, poll, and cancel agents without depending on conductor's full domain"

[features]
utoipa = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
libc = "0.2"
utoipa = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"
